# graphql-meter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml  release.yml
backend/: __init__.py  app.py  cli.py  config.py  k6_manager.py  openapi.py  vendor_manager.py
backend/core/: cache.py  plugin_base.py  plugin_registry.py
backend/k6_engine/: engine.py  script_generator.py
backend/locust_engine/: engine.py  token_manager.py  worker.py
backend/models/: test_config.py
backend/plugins/: auth_plugin.py  authproviders_plugin.py  cleanup_plugin.py  environments_plugin.py  graphql_health_plugin.py  graphqlclient_plugin.py  health_plugin.py  k6_plugin.py  locust_plugin.py  results_plugin.py  schema_plugin.py  storage_plugin.py  testconfig_plugin.py
frontend/: app.js  index.html  styles.css
frontend/components/: Accordion.js  ConfirmDialog.js  DataTable.js  ErrorLog.js  FeatureGate.js  Icons.js  Layout.js  LineChart.js  LiveChart.js  Modal.js  PercentageBar.js  Sidebar.js  Spinner.js  StatusBadge.js  Toast.js  WizardStepper.js
frontend/lib/: api.js  auth.js  featureFlags.js  router.js
frontend/pages/: AuthProviders.js  Compare.js  Dashboard.js  Environments.js  GraphQLClient.js  Login.js  Settings.js  TestConfigs.js  TestHistory.js  TestRun.js  Trends.js
helm/graphql-meter/: Chart.yaml  values.yaml
helm/graphql-meter/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
reference/: schema.md
scripts/: export_openapi.py
tests/: conftest.py  test_auth.py  test_authproviders.py  test_environments.py  test_graphqlclient.py  test_openapi.py  test_storage.py  test_testconfig.py
